# hopper

./: .clang-tidy  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  travis.yml
src/: CMakeLists.txt  HopperConfig.h.in  main.cc
src/ast/: CMakeLists.txt  ast.h  base_types.cc  base_types.h  binary_operation.h  block.h  block_statement.h  boolean_constant.h  builtin_type.cc  builtin_type.h  declaration.h  extern_function_declaration.h  extern_variable_declaration.h  function_argument_declaration.h  function_call.h  function_declaration.h  if_statement.h  int_constant.h  local_variable_declaration.h  module.h  return_statement.h  statement.h  type_declaration.h  unreachable.h  value.h  value_statement.h  valued_statement.h  variable_declaration.h  variable_destruction.h  variable_reference.h  visitor.cc
src/codegen/: CMakeLists.txt  codegen.cc  codegen.h  codegen_function.cc  codegen_statement.cc  codegen_value.cc  codegen_variable.cc
src/error/: CMakeLists.txt  error.h
src/lexer/: CMakeLists.txt  file_reader.cc  file_reader.h  lex_error.h  lexer.cc  lexer.h  operators.h  token.h
src/name_resolution/: CMakeLists.txt  visitor.cc  visitor.h
src/parser/: CMakeLists.txt  parser.cc  parser.h  scoped_location.cc  scoped_location.h
src/pretty_printer/: CMakeLists.txt  binary_operation.cc  function_declaration.cc  pretty_printer.h
src/transform/: CMakeLists.txt  add_destroy_variable.cc  add_destroy_variable.h  add_return.cc  add_return.h  function_value_body.cc  function_value_body.h
src/typechecker/: CMakeLists.txt  typechecker.cc  typechecker.h
src/util/: CMakeLists.txt  gflags_utils.cc  gflags_utils.h  logging.cc  logging.h  lookahead_stack.h  option.h  variant.h
src/visitor/: CMakeLists.txt  error_visitor.h  visitor.cc  visitor.h
test/: CMakeLists.txt  main.cc  resources.cc
test/ast/: CMakeLists.txt  builtin_type.cc
test/codegen/: CMakeLists.txt  codegen.cc
test/error/: CMakeLists.txt  error.cc
test/lexer/: CMakeLists.txt  lexer.cc
test/parser/: CMakeLists.txt  parser.cc
test/resources/: CMakeLists.txt  resources.cc  resources_utils.cc  resources_utils.h
test/resources/ir/: function_with_3_consecutives_returns.gh  function_with_arg.gh  function_with_arg.ref  function_with_args.gh  function_with_args.ref  function_with_consecutive_returns.gh  global_variable_declaration.gh  global_variable_declaration.ref  if_else_statement.gh  if_else_statement.ref  if_else_statement2.gh  if_else_statement2.ref  if_elseif_else_statement.gh  if_elseif_else_statement.ref  if_elseif_statement.gh  if_elseif_statement.ref  if_statement.gh  if_statement.ref  if_statement2.gh  if_statement2.ref  if_statement3.gh  if_statement3.ref  simple_function.gh  simple_function.ref  simple_return_function.gh  value_statement.gh  value_statement.ref  variable_declarations.gh  variable_declarations.ref
test/resources/lexer/: invalid_binary_number.gh  unrecognized.gh
test/resources/lexer/macros/: unimplemented.gh
test/resources/lexer/numbers/: hex_number_too_short.gh  invalid_number_literal.gh  invalid_octal_number.gh
test/resources/lexer/strings/: raw_unimplemented.gh  unimplemented.gh
test/resources/name_resolution/: builtin_type.ref  not_declared_type.gh  shadow.gh  shadow.ref  simple.gh  simple_error.gh
test/resources/parser/: colon_colon_after_lowercase.gh  colon_colon_for_unqualified_id.gh  colon_colon_for_unqualified_id_2.gh  empty_block_statement.gh  extern_declarations.gh  extern_variable_declaration_with_convention.gh  fail.gh  function_call.gh  function_no_body.gh  function_with_arguments.gh  function_with_malformed_arguments.gh  function_with_malformed_arguments2.gh  function_with_multiple_blocks_body.gh  function_with_unique_argument.gh  function_with_wrong_argument.gh  function_with_wrong_argument2.gh  function_with_wrong_arguments.gh  if_else_else_statement.gh  if_else_statement.gh  if_else_statement_with_error.gh  if_elseif_else_statement_with_error.gh  if_elseif_else_statement_with_error2.gh  if_elseif_statement2.gh  if_statement.gh  if_statement_with_errors.gh  invalid_id.gh  invalid_id2.gh  invalid_value_statement.gh  invalid_value_statement2.gh  invalid_value_statement3.gh  no_statement.gh  qualified_function_declaration.gh  simple_function_declaration.gh  simple_function_declaration_with_return.gh  statements_with_declaration.gh  toplevel_statements.gh  toplevel_variable.gh  toplevel_variable_missing_id.gh  toplevel_variable_missing_semicolon.gh  toplevel_variable_missing_type.gh  (+2 more)
test/resources/pretty_printer/: binop.gh  binop.ref  block_statement.gh  block_statement.ref  empty_block_statement.ref  extern_declarations.gh  extern_declarations.ref  function_call.gh  function_call.ref  function_with_arguments.gh  function_with_arguments.ref  function_with_one_argument.gh  function_with_one_argument.ref  if_else_statement.ref  if_else_statement2.gh  if_elseif_else_statement.gh  if_elseif_else_statement2.gh  if_elseif_else_statement2.ref  if_elseif_statement.gh  if_elseif_statement.ref  if_elseif_statement2.ref  if_statement2.gh  simple_function_declaration.gh  simple_function_declaration.ref  simple_function_declaration_return.gh  simple_function_declaration_return.ref  statements_with_declaration.gh  statements_with_declaration.ref  toplevel_variable_declaration.gh  toplevel_variable_declaration.ref  value_statement.gh  value_statement.ref  variable_ref.gh  variable_ref.ref
test/resources/transformer/add_return/: add_return_dead_code.gh  simple_add_return.gh  simple_add_return.ref
test/resources/transformer/destroy_variable/: arguments.gh  arguments.ref  conditional_return.gh  conditional_return.ref  destroy_scope.gh  destroy_scope.ref  (+6 more)
test/resources/type_checker/: function_return.gh  function_return.ref  invalid_binary_op.gh  invalid_int_conversion.gh  invalid_return_type.gh  valid_binary_op.gh  valid_binary_op.ref  variable_decl.gh  variable_decl.ref
test/test_utils/: CMakeLists.txt  files.cc  files.h  lexing.cc  lexing.h  utils.cc  utils.h
test/util/: CMakeLists.txt  option.cc
test/visitor/: CMakeLists.txt  visitor.cc
(+20 files in other folders)
